--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_rest.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_rest.html
@@ -3,56 +3,58 @@
 <div class="row">
 	<div class="container">
 		<div class="panel panel-default">
-			<div class="col-md-3">       
-				<@sidebar step="rest" />
-				<div class="well">      
-					#i18n{pluginwizard.pluginwizard_manage_plugin_rest.pageHelp}
+			<div class="panel-body">
+				<div class="col-md-3">       
+					<@sidebar step="rest" />
+					<div class="well">      
+						#i18n{pluginwizard.pluginwizard_manage_plugin_rest.pageHelp}
+					</div>
 				</div>
+
+				<div class="col-md-9">
+					<form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >
+						<input type="hidden" name="page" value="pluginwizard" />
+						<#include "infos_handler.html" />
+
+						<h4>#i18n{pluginwizard.pluginwizard_manage_plugin_rest.pageTitle}</br></br></h4>                 
+
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_manage_plugin_rest.labelBusinessClass} :  </label>        
+							<div class="col-md-9">
+								<#list combo_business_classes?sort_by('name') as business>
+									<div class="checkbox">
+									<#assign used = false>
+									<#if plugin_rest.getIdBusinessClasses() ??>
+									<#if plugin_rest.getIdBusinessClasses()?seq_contains(business.code?number)>
+										<#assign used = true>
+									</#if>
+									</#if>
+									<#if used>
+										<label><input type="checkbox" checked="checked" name="id_business_class${business.code}" value="${business.code}" />&nbsp;${business.name}</label>
+									<#else>
+										<label><input type="checkbox" name="id_business_class${business.code}" value="${business.code}" />&nbsp;${business.name}</label>
+									</#if>
+									</div>
+								</#list>
+							</div>   
+						</div>
+
+						<div class="form-group">      
+							<div class="col-md-offset-3 col-md-9">
+								<button type="submit" name="action_modifyRestBack" class="btn btn-primary">
+									<i class="glyphicon glyphicon-chevron-left"></i>
+									#i18n{pluginwizard.pluginwizard_manage_plugin_rest.buttonBack}
+								</button>                        
+								<button type="submit" name="action_modifyRestNext" class="btn btn-primary">
+									#i18n{pluginwizard.pluginwizard_manage_plugin_rest.buttonNext}
+									<i class="glyphicon glyphicon-chevron-right"></i>
+								</button>  
+							</div> 
+						</div>
+					</form>
+				</div>
+				<div class="clearfix"></div>
 			</div>
-
-			<div class="col-md-9">
-				<form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >
-					<input type="hidden" name="page" value="pluginwizard" />
-					<#include "infos_handler.html" />
-
-					<h4>#i18n{pluginwizard.pluginwizard_manage_plugin_rest.pageTitle}</br></br></h4>                 
-
-					<div class="form-group">
-						<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_manage_plugin_rest.labelBusinessClass} :  </label>        
-						<div class="col-md-9">
-							<#list combo_business_classes?sort_by('name') as business>
-								<div class="checkbox">
-								<#assign used = false>
-								<#if plugin_rest.getIdBusinessClasses() ??>
-								<#if plugin_rest.getIdBusinessClasses()?seq_contains(business.code?number)>
-									<#assign used = true>
-								</#if>
-								</#if>
-								<#if used>
-									<label><input type="checkbox" checked="checked" name="id_business_class${business.code}" value="${business.code}" />&nbsp;${business.name}</label>
-								<#else>
-									<label><input type="checkbox" name="id_business_class${business.code}" value="${business.code}" />&nbsp;${business.name}</label>
-								</#if>
-								</div>
-							</#list>
-						</div>   
-					</div>
-
-					<div class="form-group">      
-						<div class="col-md-offset-3 col-md-9">
-							<button type="submit" name="action_modifyRestBack" class="btn btn-primary">
-								<i class="glyphicon glyphicon-chevron-left"></i>
-								#i18n{pluginwizard.pluginwizard_manage_plugin_rest.buttonBack}
-							</button>                        
-							<button type="submit" name="action_modifyRestNext" class="btn btn-primary">
-								#i18n{pluginwizard.pluginwizard_manage_plugin_rest.buttonNext}
-								<i class="glyphicon glyphicon-chevron-right"></i>
-							</button>  
-						</div> 
-					</div>
-				</form>
-			</div>
-			<div class="clearfix"></div>
 		</div>
 	</div>
 </div>
