--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_application.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_application.html
@@ -3,74 +3,76 @@
 <div class="row">
 	<div class="container">
 		<div class="panel panel-default">
-			<div class="col-md-3">             
-				<@sidebar step="xpage" />
-				<div class="well">         
-					#i18n{pluginwizard.pluginwizard_modify_application.pageHelp}   
-				</div>  
-			</div>
+			<div class="panel-body">
+				<div class="col-md-3">             
+					<@sidebar step="xpage" />
+					<div class="well">         
+						#i18n{pluginwizard.pluginwizard_modify_application.pageHelp}   
+					</div>  
+				</div>
 
-			<div class="col-md-9">
-				<form class="form form-horizontal" method="post" action="jsp/site/Portal.jsp" >       
-					<fieldset>
-						<legend>#i18n{pluginwizard.pluginwizard_modify_application.pageTitle}</legend>
-						<input type="hidden" name="page" value="pluginwizard" />                
-						<input type="hidden" name="id" value="${application.id}" />                                            
+				<div class="col-md-9">
+					<form class="form form-horizontal" method="post" action="jsp/site/Portal.jsp" >       
+						<fieldset>
+							<legend>#i18n{pluginwizard.pluginwizard_modify_application.pageTitle}</legend>
+							<input type="hidden" name="page" value="pluginwizard" />                
+							<input type="hidden" name="id" value="${application.id}" />                                            
 
-						 <#include "errors_handler.html" />
+							 <#include "errors_handler.html" />
 
-						 <div class="form-group">
-							<label class="control-label col-md-3">#i18n{pluginwizard.pluginwizard_modify_application.labelApplicationName} :</label>  
-							<div class="col-md-9">
-								<input type="text" name="application_name" value="${application.applicationName}" class="form-control" />  
+							 <div class="form-group">
+								<label class="control-label col-md-3">#i18n{pluginwizard.pluginwizard_modify_application.labelApplicationName} :</label>  
+								<div class="col-md-9">
+									<input type="text" name="application_name" value="${application.applicationName}" class="form-control" />  
+								</div>
 							</div>
-						</div>
-						<div class="form-group">
-							<label class="control-label col-md-3">#i18n{pluginwizard.pluginwizard_modify_application.labelApplicationClass} :</label> 
-							<div class="col-md-9">
-								<input type="text" name="application_class" value="${application.applicationClass}" class="form-control" />
-							</div>     
-						</div>
-						 
-						<div class="form-group">
-							<label class="control-label col-md-3">#i18n{pluginwizard.pluginwizard_modify_application.labelBusinessClass} :  </label>        
-							<div class="col-md-9">
-								<#list combo_business_classes?sort_by('name') as business>
-									<div class="checkbox">
-									<#if application.getIdBusinessClasses()?seq_contains(business.code?number)>
-										<label><input type='checkbox' checked='checked' name='id_business_class${business.code}' value='${business.code}'/>&nbsp; ${business.name}</label>
-									<#else>
-										<#assign used = false>
-										<#list plugin_applications as plugin_application> 
-											<#if plugin_application.getIdBusinessClasses()?seq_contains(business.code?number)>
-												<#assign used = true>
-											</#if>
-										</#list>
-										<#if used>
-											<label><input type="checkbox" disabled="disabled" name="id_business_class${business.code}" value="${business.code}" /> &nbsp; ${business.name}</label>
+							<div class="form-group">
+								<label class="control-label col-md-3">#i18n{pluginwizard.pluginwizard_modify_application.labelApplicationClass} :</label> 
+								<div class="col-md-9">
+									<input type="text" name="application_class" value="${application.applicationClass}" class="form-control" />
+								</div>     
+							</div>
+							 
+							<div class="form-group">
+								<label class="control-label col-md-3">#i18n{pluginwizard.pluginwizard_modify_application.labelBusinessClass} :  </label>        
+								<div class="col-md-9">
+									<#list combo_business_classes?sort_by('name') as business>
+										<div class="checkbox">
+										<#if application.getIdBusinessClasses()?seq_contains(business.code?number)>
+											<label><input type='checkbox' checked='checked' name='id_business_class${business.code}' value='${business.code}'/>&nbsp; ${business.name}</label>
 										<#else>
-											<label><input type="checkbox" name="id_business_class${business.code}" value="${business.code}" /> &nbsp; ${business.name}</label>
+											<#assign used = false>
+											<#list plugin_applications as plugin_application> 
+												<#if plugin_application.getIdBusinessClasses()?seq_contains(business.code?number)>
+													<#assign used = true>
+												</#if>
+											</#list>
+											<#if used>
+												<label><input type="checkbox" disabled="disabled" name="id_business_class${business.code}" value="${business.code}" /> &nbsp; ${business.name}</label>
+											<#else>
+												<label><input type="checkbox" name="id_business_class${business.code}" value="${business.code}" /> &nbsp; ${business.name}</label>
+											</#if>
 										</#if>
-									</#if>
-									</div>
-								</#list>
-							</div>   
-						</div>
-						 
-						<div class="form-group">
-							<div class="col-md-offset-3 col-md-9">
-								<button type="submit" name="action_modifyApplication"class="btn btn-primary">
-									#i18n{pluginwizard.pluginwizard_modify_application.buttonModifyApplication}
-								</button>                    
-								<button type="submit" name="view_manageApplications" class="btn">
-									#i18n{pluginwizard.pluginwizard_modify_application.buttonBack}
-								</button>
+										</div>
+									</#list>
+								</div>   
+							</div>
+							 
+							<div class="form-group">
+								<div class="col-md-offset-3 col-md-9">
+									<button type="submit" name="action_modifyApplication"class="btn btn-primary">
+										#i18n{pluginwizard.pluginwizard_modify_application.buttonModifyApplication}
+									</button>                    
+									<button type="submit" name="view_manageApplications" class="btn">
+										#i18n{pluginwizard.pluginwizard_modify_application.buttonBack}
+									</button>
+								</div>                
 							</div>                
-						</div>                
-					</fieldset>
-				</form>  
-			</div>    
-			<div class="clearfix"></div>
+						</fieldset>
+					</form>  
+				</div>    
+				<div class="clearfix"></div>
+			</div>
 		</div>
 	</div>
 </div>
