--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_portlet.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_portlet.html
@@ -3,55 +3,57 @@
 <div class="row">
 	<div class="container">
 		<div class="panel panel-default">
-			<div class="col-md-3">             
-				<@sidebar step="portlet" />
-				<div class="well">         
-					#i18n{pluginwizard.pluginwizard_modify_portlet.pageHelp} 
-				</div>  
-			</div>
+			<div class="panel-body">
+				<div class="col-md-3">             
+					<@sidebar step="portlet" />
+					<div class="well">         
+						#i18n{pluginwizard.pluginwizard_modify_portlet.pageHelp} 
+					</div>  
+				</div>
 
-			<div class="col-md-9">
+				<div class="col-md-9">
 
-				<form class="form form-horizontal" method="post" action="jsp/site/Portal.jsp" >
-					<fieldset>
-						<legend>#i18n{pluginwizard.pluginwizard_modify_portlet.pageTitle}</legend>
+					<form class="form form-horizontal" method="post" action="jsp/site/Portal.jsp" >
+						<fieldset>
+							<legend>#i18n{pluginwizard.pluginwizard_modify_portlet.pageTitle}</legend>
 
-						<input type="hidden" name="page" value="pluginwizard" />
-						<input type="hidden" name="id" value="${portlet.id}" />  
+							<input type="hidden" name="page" value="pluginwizard" />
+							<input type="hidden" name="id" value="${portlet.id}" />  
 
-						 <#include "errors_handler.html" />
+							 <#include "errors_handler.html" />
 
-						<div class="form-group">
-							<label class="control-label col-md-3">#i18n{pluginwizard.pluginwizard_modify_portlet.labelPortletClass} :</label>
-							<div class="col-md-9">
-								 <input class="form-control" type="text" name="portlet_class" size="30" value="${portlet.portletClass}"  />
-							</div>  
-						</div>
-
-						<div class="form-group">
-							<label class="control-label col-md-3">#i18n{pluginwizard.pluginwizard_modify_portlet.labelPortletTypeName} :</label>
-							<div class="col-md-9">
-								 <input class="form-control" type="text" name="portlet_type_name"  size="30"  value="${portlet.portletTypeName}"/>
-							</div>  
-						</div>
-
-						<div class="form-group">
-							<label class="control-label col-md-3">#i18n{pluginwizard.pluginwizard_modify_portlet.labelJspBaseName} :</label>
-							<div class="col-md-9">
-								 <input class="form-control" type="text" name="jsp_base_name" value="${portlet.jspBaseName}" />
-							</div>  
-						</div>
-
-						<div class="form-group">
-							<div class="col-md-offset-3 col-md-9">
-								<button type="submit" name="action_modifyPortlet" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_modify_portlet.buttonModifyPortlet}</button>
-								<button type="submit" name="view_managePortlets" class="btn">#i18n{pluginwizard.pluginwizard_modify_portlet.buttonBack}</button>
+							<div class="form-group">
+								<label class="control-label col-md-3">#i18n{pluginwizard.pluginwizard_modify_portlet.labelPortletClass} :</label>
+								<div class="col-md-9">
+									 <input class="form-control" type="text" name="portlet_class" size="30" value="${portlet.portletClass}"  />
+								</div>  
 							</div>
-						</div> 
-					</fieldset>
-				</form>
+
+							<div class="form-group">
+								<label class="control-label col-md-3">#i18n{pluginwizard.pluginwizard_modify_portlet.labelPortletTypeName} :</label>
+								<div class="col-md-9">
+									 <input class="form-control" type="text" name="portlet_type_name"  size="30"  value="${portlet.portletTypeName}"/>
+								</div>  
+							</div>
+
+							<div class="form-group">
+								<label class="control-label col-md-3">#i18n{pluginwizard.pluginwizard_modify_portlet.labelJspBaseName} :</label>
+								<div class="col-md-9">
+									 <input class="form-control" type="text" name="jsp_base_name" value="${portlet.jspBaseName}" />
+								</div>  
+							</div>
+
+							<div class="form-group">
+								<div class="col-md-offset-3 col-md-9">
+									<button type="submit" name="action_modifyPortlet" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_modify_portlet.buttonModifyPortlet}</button>
+									<button type="submit" name="view_managePortlets" class="btn">#i18n{pluginwizard.pluginwizard_modify_portlet.buttonBack}</button>
+								</div>
+							</div> 
+						</fieldset>
+					</form>
+				</div>
+				<div class="clearfix"></div>
 			</div>
-			<div class="clearfix"></div>
 		</div>
 	</div>
 </div>
